--- a/unit-1/lab-css-selectors/styles.css
+++ b/unit-1/lab-css-selectors/styles.css
@@ -1,6 +1,61 @@
 /* Move your styles here when you're ready to clean up your HTML file */
 /* Don't forget to link to this file in your HTML, otherwise your styles won't show up! */
 
-h1 {
-  color: blue;
+* {
+	font-size: 16px;
+}
+
+h1,
+h2 {
+	font-family: "Courier New", Courier, monospace;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	border-bottom: 0.25rem solid orange;
+}
+
+.class-list {
+	list-style-type: square;
+}
+
+.item {
+	border: 0.2rem dotted orangered;
+}
+
+.even {
+	background-color: grey;
+}
+
+.odd {
+	background-color: black;
+	color: white;
+}
+
+#item1 {
+	font-size: 30px;
+}
+
+#item2 {
+	text-align: right;
+}
+
+#advanced-selectors ol > li > p {
+	padding: 1rem;
+	background-color: grey;
+}
+
+#advanced-selectors a[title="Bitmaker"]:hover {
+	text-decoration: none;
+}
+
+#advanced-selectors ul > li > a:hover {
+	color: yellow;
+}
+#advanced-selectors ul > li > a:active {
+	color: red;
 }
